user/updateLastLocation API
