# app/Http/Requests/API/UserLocationRequest.php
@@ -1,0 +1,36 @@
+<?php
+
+namespace App\Http\Requests\API;
+
+use Illuminate\Foundation\Http\FormRequest;
+use App\Traits\API\FailedValidateTrait;
+
+class UserLocationRequest extends FormRequest
+{
+    use FailedValidateTrait;
+
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'date_time' => 'required|string',
+            'latitude' => 'required|string',
+            'longitude' => 'required|string',
+            'address' => 'required|string',
+        ];
+    }
+}
